Coisas que faltaram, desculpa pelo commit preguiçoso

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         color: white;
       }
       canvas {
-        background-image: url("assets/unesp.jpg");
+        /* background-image: url("assets/unesp.jpg"); */
         background-size: cover;
         border: 1px solid black;
       }
