--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
         color: white;
       }
       canvas {
-        /* background-image: url("assets/unesp.jpg"); */
         background-size: cover;
         border: 1px solid black;
       }
@@ -41,6 +40,7 @@
 <script src="elements/Lolo.js"></script>
 <script src="elements/Skull.js"></script>
 <script src="control/GameScreen.js"></script>
+<script src="utils/Sound.js"></script>
 <script src="control/Main.js"></script>
 <script>
   Main.main();
