Create Tetris elements

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 <script src="utils/Position.js"></script>
 <script src="control/GameController.js"></script>
 <script src="elements/Element.js"></script>
-<script src="elements/Fire.js"></script>
-<script src="elements/Lolo.js"></script>
-<script src="elements/Skull.js"></script>
+<script src="elements/Block.js"></script>
+<script src="elements/Piece.js"></script>
 <script src="control/GameScreen.js"></script>
+<script src="utils/Tetris.js"></script>
 <script src="utils/Sound.js"></script>
 <script src="control/Main.js"></script>
 <script>
